--- a/SIANWEB/web.config
+++ b/SIANWEB/web.config
@@ -187,6 +187,9 @@ http://go.microsoft.com/fwlink/?LinkId=169433
       <setting name="SIANWEB_WsMacola_wsMacola" serializeAs="String">
         <value>http://207.248.253.104/wsMacola/wsMacola.asmx</value>
       </setting>
+      <setting name="SIANWEB_wsClienteTerritorio_Service1" serializeAs="String">
+        <value>http://207.248.253.97/wsClienteTerr/Service1.asmx</value>
+      </setting>
     </SIANWEB.Properties.Settings>
   </applicationSettings>
   <system.serviceModel>
