--- a/SIANWEB/Properties/Settings.settings
+++ b/SIANWEB/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="SIANWEB_WsMacola_wsMacola" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://207.248.253.104/wsMacola/wsMacola.asmx</Value>
     </Setting>
+    <Setting Name="SIANWEB_wsClienteTerritorio_Service1" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://207.248.253.97/wsClienteTerr/Service1.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
